--- a/manuscript_00.Rmd
+++ b/manuscript_00.Rmd
@@ -53,7 +53,7 @@ library(matrixStats)
 # setup caption-ing
 fig_cap <- captioner("Figure")
 supFig_cap <- captioner("Supplemental Figure")
-tab_cap <- captioner("Table")
+#tab_cap <- captioner("Table")
 supTab_cap <- captioner("Supplemental Table")
 
 scEiaD_2020_v01 <- dbPool(drv = SQLite(), dbname = "~/data/scEiaD/MOARTABLES__anthology_limmaFALSE___5000-transform-counts-universe-batch-scVIprojectionSO-8-0.2-500-0.6.sqlite", idleTimeout = 3600000)
@@ -94,8 +94,12 @@ load('~/data/scEiaD/top_marker_pmid.Rdata')
 
 
 # Introduction
-## Explosion of single cell transcriptomic atlases
-The  recent introduction of lower cost and high throughput single cell sequencing technology has led to an explosion of research across many fields. As of January 2021, over 40 million cells have been sequenced across over 1,200 studies and the average size of each study past 2020 is over 100,000 cells [@svenssonCuratedDatabaseReveals2020]. The retina was used as the source tissue in one of the earliest works in the high throughput single cell transcriptomics field [@macoskoHighlyParallelGenomewide2015] and as of late 2020, over a dozen published studies containing over a million cells have used single cell technology to profile cell type specific gene expression patterns, cell fate trajectory, tissue and cell differentiation, and disease perturbation across multiple mammalian organisms [@buenaventuraIdentificationGenesEnriched2019; @clarkComprehensiveAnalysisRetinal2018; @collinCRXExpressionPluripotent2019; @collinDeconstructingRetinalOrganoids2019; @cowanCellTypesHuman2020; @diacouSix3Six6Are2018; @eldredThyroidHormoneSignaling2018; @hengHypoxiaToleranceNorrindeficient2019; @huDissectingTranscriptomeLandscape2019; @logiudiceSinglecellTranscriptionalLogic2019; @lukowskiSinglecellTranscriptomeAtlas2019; @luSingleCellAnalysisHuman2020;  @menonSinglecellTranscriptomicAtlas2019; @okorenMicroglialFunctionDistinct2019; @pengMolecularClassificationComparative2019; @phillipsNovelApproachSingle2018; @rheaumeSingleCellTranscriptome2018; @ruedaHippoPathwayBlocks2019; @shekharComprehensiveClassificationRetinal2016; @sridharSingleCellTranscriptomicComparison2020; @tranSingleCellProfilesRetinal2019; @voigtMolecularCharacterizationFoveal2019; @voigtSinglecellTranscriptomicsHuman2019; @yanCellAtlasHuman2020]. 
+
+## The retina, single cell gene analysis, and a recent explosion
+
+The retina contains a multitude of cell types that, in total, are responsible for turning light information into signal for the brain to interpret as vision. Very briefly, the photoreceptors (rods and cones) are responsible for capturing the photons. The retinal pigmented epithelium (RPE) behind the photoreceptors physically support the rods and cones by processing byproducts of the visual cycle. Müller glia serve as support cells for the neurons. The retinal bipolar cells transmit the electrical signal from the photoreceptors to the retinal ganglion cells. Horizontal and amacrine regulate and help interpret signals from the photoreceptors. The signal is relayed via the retinal ganglion projections through the optic stalk to the brain (for review see [@maslandNeuronalOrganizationRetina2012]). Since 2000 many groups have investigated gene expression in small numbers of individual cells of the retina [@anniesIsoformPatternAChR2002a; @hagstromConePigmentGene2000; @trimarchiMolecularHeterogeneityDeveloping2007a; @wahlinMethodAnalysisGene2004].
+
+The  recent introduction of lower cost and high throughput single cell sequencing technology has led to an explosion of research across many fields. As of January 2021, over 40 million cells have been sequenced across over 1,200 studies and the average size of each study past 2020 is over 100,000 cells [@svenssonCuratedDatabaseReveals2020]. The retina was used as the source tissue in one of the earliest works in the high throughput single cell transcriptomics field [@macoskoHighlyParallelGenomewide2015] and as of late 2020, over a dozen published studies containing over a million cells have used single cell technology to profile cell type specific gene expression patterns, cell fate trajectory, tissue and cell differentiation, and disease perturbation across multiple mammalian species [@buenaventuraIdentificationGenesEnriched2019; @clarkComprehensiveAnalysisRetinal2018; @collinCRXExpressionPluripotent2019; @collinDeconstructingRetinalOrganoids2019; @cowanCellTypesHuman2020; @diacouSix3Six6Are2018; @eldredThyroidHormoneSignaling2018; @hengHypoxiaToleranceNorrindeficient2019; @huDissectingTranscriptomeLandscape2019; @logiudiceSinglecellTranscriptionalLogic2019; @lukowskiSinglecellTranscriptomeAtlas2019; @luSingleCellAnalysisHuman2020;  @menonSinglecellTranscriptomicAtlas2019; @okorenMicroglialFunctionDistinct2019; @pengMolecularClassificationComparative2019; @phillipsNovelApproachSingle2018; @rheaumeSingleCellTranscriptome2018; @ruedaHippoPathwayBlocks2019; @shekharComprehensiveClassificationRetinal2016; @sridharSingleCellTranscriptomicComparison2020; @tranSingleCellProfilesRetinal2019; @voigtMolecularCharacterizationFoveal2019; @voigtSinglecellTranscriptomicsHuman2019; @yanCellAtlasHuman2020]. 
 
 <!-- ## Many researchers use processed count tables for methods development and hypothesis testing -->
 
@@ -121,11 +125,17 @@ We propose that by re-processing publicly available raw single cell transcriptom
 
 The first step in building a meta-atlas is identifying studies to draw the data from. We identified ocular single cell RNA sequencing (scRNA) studies by querying PubMed, the Sequence Read Archive (SRA), and the European Nucleotide Archive (ENA) for the inclusive terms "retina", "single cell", "scRNA", "ocular", "eye", "transcriptome." We then hand filtered the results to only keep ocular and normal (non-perturbed or mutagenized) data from single cell RNA-seq technology. On September 2020 we identified `r meta_filter %>% pull(study_accession) %>% unique() %>% length() - 1` deposited datasets that have been published in `r meta_filter %>% pull(Citation) %>% unique() %>% length()` publications (`r fig_cap(name = 'fig1', display = 'cite')`). In December 2020 we ran our search again, find N studies to project onto scEiaD. To provide a non-ocular reference we also downloaded the raw sequence data from the Tabula Muris project for re-processing. In cases where the fastq file from the SRA was not processed properly, we acquired the bam files (SRA or personal correspondence) and re-extracted the fastq. After downloading all the data we had 5.7 TB across `r scEiaD_2020_v01 %>% tbl('metadata_filter') %>% pull(sample_accession) %>% unique() %>% length()` fastq file sets. 
 
-```{r fig1, fig.width=13, fig.height=6, fig.cap=fig1_cap, echo=FALSE, message = FALSE}
-fig1_cap <- fig_cap(name='fig1', caption =  'a. Counts of (study) accession, published papers, and batches for each scRNA technlogy, split by organism. b. Simplified directed workflow of major steps in scEiaD creation from raw counts to gene counts, benchmarking optimal integration methods (SnakePOP) to produce batch corrected latent dimensions (LatentDims), then downstream analysis outputs like clustering, differential gene testing (DiffTesting), and 2D UMAP visualization. c. Cell type counts extracted from published studies for the more common retina cell types, split by species. Count of study accessions for each species overlaid on bar plot.')
+```{r fig1, fig.width=12, fig.height=6, fig.cap=fig1_cap, echo=FALSE, message = FALSE, warning = FALSE}
+fig1_cap <- fig_cap(name='fig1', caption =  'a. Cartoon schematic of retina with major cell types delinearted b. Simplified directed workflow of major steps in scEiaD creation from raw counts to gene counts, benchmarking optimal integration methods (SnakePOP) to produce batch corrected latent dimensions (LatentDims), then downstream analysis outputs like clustering, differential gene testing (DiffTesting), and 2D UMAP visualization. c. Counts of (study) accession, published papers, and batches for each scRNA technlogy, split by organism. d. Cell type counts extracted from published studies for the more common retina cell types, split by species. Count of study accessions for each species overlaid on bar plot.')
 
 source('figs_and_tables/fig1.R')
-plot_grid(plot_grid(a, c, align = 'v',  axis = 'lr', ncol = 1, labels = c('','c')), b,  nrow = 1, rel_widths = c(1.1,1), labels = c('a','b'))
+retina_cartoon <- ggdraw() + draw_image("figs_and_tables/retina_cells_flat2.png", scale = 1)
+plot_grid(
+  plot_grid(retina_cartoon, b + coord_cartesian(clip = "off"), nrow = 1, labels = c('','b'), rel_widths = c(0.5,1)), 
+  plot_grid(a, c, align = 'v',  axis = 'lr', nrow = 1, labels = c('','d')),
+  nrow = 2, 
+  rel_heights= c(1,1), 
+  labels = c('a','c'))
 ```
 
 ## `r qc %>% nrow() %>% as.integer() %>% format(., big.mark=",", scientific=FALSE)` cells before quality control
@@ -134,7 +144,7 @@ Gene-level counts were quantified with the kallisto bustool pseudo-aligner for b
 
 A core objective of many scRNA based studies is labeling the cell types. As this information is crucial to assess dataset integration and provide an accurate reference for user querying, we extracted individual cell labels with a combination of inspecting the GEO web site, supplemental information from the publication, custom web resources (e.g. a web app was created for the paper), and personal correspondence. After normalizing cell type name nomenclature, we obtained labels for `r meta_filter$CellType %>% table() %>% sum()` cells across `r meta_filter$CellType %>% table() %>% length()` cell types (`r supTab_cap(name = 'supTab1_CTcounts', display = 'cite')`). 
 
-## Running `r methods %>% length()` tools in a Snakefile-based system
+## Running `r methods %>% length()` tools in a Snakemake-based system
 
 Disentangling the technical and biological effects from the datasets is crucial. A wide variety of methods have been written for this function. As we were uncertain which would perform the best and it is difficult to manually assess performance we ran `r methods %>% length()` tools with a commonly used set of key parameters: 2000 hyper variable genes (HVG), 8 and 30 latent dimensions returned, and the louvain clustering algorithm with 7 k-nearest neighbors. The Snakemake system was used to automate the running of the wide variety of tools. In total 15,226 jobs were run to quantify expression and assess integration performance. 
 
@@ -161,7 +171,7 @@ To merge the different scores we define $sumZScale = \sum scale(m)$ where m is a
 
 <!-- For users who have custom needs, the weights of each metrics can be customized in scPOP to prioritize batch mixing or cluster/cell type separation. -->
 
-```{r figBenchmark, fig.width=14, fig.height=8, fig.cap=figBenchmark_cap, echo=FALSE, message = FALSE}
+```{r figBenchmark, fig.width=14, fig.height=8, fig.cap=figBenchmark_cap, echo=FALSE, message = FALSE, warning = FALSE}
 figBenchmark_cap <- fig_cap(name='figBenchmark', caption =  'a. Example of a method (combat) which has a high level of batch blending, but poor separation of cell types (colored by cell type). b. no batch correction cleanly separates cell types but does not mix batches (colored by study). c. sumZScale (higher is better) for each method across a variety of data normalizations. All methods shown here use 2000 HVG, louvain clustering, and 8 latent dimensions d. Optimal parameters for scVI methods across 1000 to 10000 HVGs and 4 to 100 latent dimensions.')
 
 source('figs_and_tables/fig_umap_benchmarking.R')
@@ -200,8 +210,8 @@ The precision recall (PR) curve visualizes the ability of the model to precisely
 
 <!-- With the wide diversity of the scEiaD we can get a sense on how consistent the retina community is at labelling the major cell types of the retina. By calculating the AUC against each individual cell type and study, we can see which cell types are consistently labeled correctly across most (`r fig_cap(name = 'supFig_PR_cap', display = 'cite')`). Most studies show very similar performance with our ML model. The study with the lowest correspondence between published and predicted label is Macoksko et al; this study is notable as it was the first demonstration of the droplet based scRNA technique.   -->
 
-```{r figXGboost_umap, fig.width=18, fig.height=13, fig.cap=figXGboost_umap_cap, echo=FALSE, message = FALSE}
-figXGboost_umap_cap <- fig_cap(name='figXGboost_umap', caption =  'filler text hello world')
+```{r figXGboost_umap, fig.width=18, fig.height=13, fig.cap=figXGboost_umap_cap, echo=FALSE, message = FALSE, warning = FALSE}
+figXGboost_umap_cap <- fig_cap(name='figXGboost_umap', caption =  'a. Top genes that are differentially expressed across the major cell types of the retina. Genes are colored by which cell type they are differentially expressed in. The dot size is proportional to the percentage of those cells that have detectable levels of the gene. The color of the dot is the log2 scaled CPM expression. b. 2D UMAP projection of scEiaD, colored by cell type. The Tabula Muris data is colored all in gray. c. Facet plot that demonstrates how each major cell type of the retina is contained within a distinct space. d. Confusion matrix of cell type prediction performance of our xgboost labeller between predicted (y axis) and known (x axis) with data withheld from the machine learner. Most of the cell types are indeed labelled as their true type. e. Faceting of 2D UMAP by species and colored by cell type demonstrate how the major cell types of the retina share space with like cell types, despite being from mouse, human, and macaque.')
 
 source('figs_and_tables/sup_fig2__celltype_xgboost_labelling.R')
 source('figs_and_tables/make_meta_scatter_umap_plot.R')
@@ -228,8 +238,8 @@ dplot <- d  + facet_grid(vars(cluster), scale = 'free_y', space = 'free') + them
 
 input <- list()
 input[['meta_column']] <- 'CellType_predict'
-input[['pt_size_back']] <- 0
-input[['pt_size_meta']] <- 0
+input[['pt_size_back']] <- 1
+input[['pt_size_meta']] <- 1
 #input[['gene_and_meta_scatter_tech']] <- 'Droplet'
 input[['meta_column_transform']] <- 'None'
 input[['label_toggle']] <- 2
@@ -245,8 +255,8 @@ ctp <- make_meta_scatter_umap_plot(input, mf, meta_filter,
 
 input <- list()
 input[['meta_column']] <- 'CellType_predict'
-input[['pt_size_back']] <- 1
-input[['pt_size_meta']] <- 1
+input[['pt_size_back']] <- 2
+input[['pt_size_meta']] <- 2
 input[['gene_and_meta_scatter_tech']] <- 'Droplet'
 input[['meta_column_transform']] <- 'None'
 input[['meta_filter_cat']] <- 'CellType_predict'
@@ -261,8 +271,8 @@ ctp2 <- make_meta_scatter_umap_plot(input, mf, meta_filter,
 
 input <- list()
 input[['meta_column']] <- 'CellType_predict'
-input[['pt_size_back']] <- 0
-input[['pt_size_meta']] <- 0
+input[['pt_size_back']] <- 1
+input[['pt_size_meta']] <- 1
 #input[['gene_and_meta_scatter_tech']] <- 'Droplet'
 input[['meta_column_transform']] <- 'None'
 input[['meta_filter_cat']] <- 'CellType_predict'
@@ -292,9 +302,9 @@ plot_grid(dplot + theme(legend.title = element_text(angle = 90),
 
 ## ML cell type labels result in high study diversity for each cell type
 
-After ML projection of cell type labels from the original `r meta_filter %>% filter(!is.na(CellType)) %>% nrow()` labels onto a total of `r meta_filter %>% filter(!is.na(CellType_predict) | !is.na(TabulaMurisCellType_predict)) %>% nrow()` cells we have substantially improved the number of studies per cell type. For example, we went from `r joinedSA %>% filter(CellType == 'Muller Glia') %>% pull(2)` human studies with labelled Muller Glia to `r joinedSA %>% filter(CellType == 'Muller Glia') %>% pull(5)` after labelling (`r supTab_cap(name = 'supTab_SAcounts', display = 'cite')`). Overall we go from an average of `r joinedSA %>% filter(CellType != 'Unlabelled') %>% pull(2) %>% mean()` studies per human cell type to `r joinedSA %>% filter(CellType != 'Unlabelled') %>% pull(5) %>% mean()` and `r joinedSA %>% filter(CellType != 'Unlabelled') %>% pull(4) %>% mean()` studies per mouse cell type to `r joinedSA %>% filter(CellType != 'Unlabelled') %>% pull(7) %>% mean()` after transferring the cell type labels. 
+After ML projection of cell type labels from the original `r meta_filter %>% filter(!is.na(CellType)) %>% nrow()` labels onto a total of `r meta_filter %>% filter(!is.na(CellType_predict) | !is.na(TabulaMurisCellType_predict)) %>% nrow()` cells we have substantially improved the number of studies per cell type. For example, we went from `r joinedSA %>% filter(CellType == 'Muller Glia') %>% pull(2)` human studies with labelled Muller Glia to `r joinedSA %>% filter(CellType == 'Muller Glia') %>% pull(5)` after labeling (`r supTab_cap(name = 'supTab_SAcounts', display = 'cite')`). Overall we go from an average of `r joinedSA %>% filter(CellType != 'Unlabelled') %>% pull(2) %>% mean()` studies per human cell type to `r joinedSA %>% filter(CellType != 'Unlabelled') %>% pull(5) %>% mean()` and `r joinedSA %>% filter(CellType != 'Unlabelled') %>% pull(4) %>% mean()` studies per mouse cell type to `r joinedSA %>% filter(CellType != 'Unlabelled') %>% pull(7) %>% mean()` after transferring the cell type labels. 
 
-As another check on the quality of the cell type assignments, we ran pairwise differential expression tests between the predicted cell types (see methods for further details). We show the five most consistently differentially expressed genes for each of the major retina cell types (`r supFig_cap(name = 'figXGboost_umap', display = 'cite')`a). As a simple metric to identify known and unknown genes relating to the cell type specific expression we search PubMed for the number of publications with two searches per gene. We expect most of the genes identified to be known in the literature. The first search is the more precise "gene AND cell type" (e.g. "PDE6H AND Cones") and the second search is the more inclusive "gene AND retina" (e.g. "PDE6G AND Retina"). Of the 55 genes in (`r supFig_cap(name = 'figXGboost_umap', display = 'cite')`a), 40 had one or more citations in the gene - cell type search (table X) and 51 had one or more citation in the inclusive search. The 55 genes had a mean of `r top_markers %>% group_by(cluster)  %>% slice_max(mean_auc, n =5) %>% pull(c2) %>% mean() %>% round()` studies (with the inclusive gene by "retina" search). In contrast, 100 randomly chosen genes had a mean of `r pmid3 %>% map(function(x) sum(!is.na(x))) %>% unlist() %>% enframe() %>% pull(value) %>% mean() %>% round`. 
+As another check on the quality of the cell type assignments, we ran pairwise differential expression tests between the predicted cell types (see methods for further details). We show the five most consistently differentially expressed genes for each of the major retina cell types (`r fig_cap(name = 'figXGboost_umap', display = 'cite')`a). As a simple metric to identify known and unknown genes relating to the cell type specific expression we search PubMed for the number of publications with two searches per gene. We expect most of the genes identified to be known in the literature. The first search is the more precise "gene AND cell type" (e.g. "PDE6H AND Cones") and the second search is the more inclusive "gene AND retina" (e.g. "PDE6G AND Retina"). Of the 55 genes in (`r fig_cap(name = 'figXGboost_umap', display = 'cite')`a), 40 had one or more citations in the gene - cell type search (table X) and 51 had one or more citation in the inclusive search. The 55 genes had a mean of `r top_markers %>% group_by(cluster)  %>% slice_max(mean_auc, n =5) %>% pull(c2) %>% mean() %>% round()` studies (with the inclusive gene by "retina" search). In contrast, 100 randomly chosen genes had a mean of `r pmid3 %>% map(function(x) sum(!is.na(x))) %>% unlist() %>% enframe() %>% pull(value) %>% mean() %>% round`. 
 
 The four genes with zero hits were SCRG1 (Astrocytes), BTBD8 (Bipolar Cells), GATM (Microglia), and FRZB (Muller Glia). In a more exhaustive literature search we find that SCRG1 is a secreted protein which marks brain neurons, regulates human mesenchymal stem cells differentiation, and is overexpressed in brain astrocyte precursors [@aomatsuNovelSCRG1BST12014; @chaboubTemporalProfilingAstrocyte2016]. BTBD8 contains BTB/POZ domains known to generally be associated with with transcription factor mediated protein-protein interactions and has been seen to be overexpresed in enteric neurons [@xuMolecularCloningCharacterization2004; @zollmanBTBDomainFound1994; @drokhlyansky_human_2020]. GATM is mitochondrial enzyme involved in creatine biosynthesis and was previously shown to up-regulated in a brain microglia population [@hammondSingleCellRNASequencing2019]. FRZB was previously referred to as SFRP3 and this Wnt pathway member has been previously shown to be active in Muller Glia [@zhuCharacterizationCanonicalWnt2018]. Overall, as expected, we find very high concordance with known retina cell type markers.
 
@@ -302,7 +312,7 @@ The four genes with zero hits were SCRG1 (Astrocytes), BTBD8 (Bipolar Cells), GA
 
 The 2D UMAP projection of the scVI-calculated batch corrected 8 latent dimensional space blends the `r meta_filter %>% pull(study_accession) %>% unique() %>% length() - 1` studies together while also maintaining distinct space for the `r meta_filter$CellType_predict %>% table() %>% length()` unique cell types. We also see good mixing across all the droplet and well based single cell technologies (`r supFig_cap(name = 'supFig_platformInt', display = 'cite')`). We see the neurogenic and progenitor populations from which the retinal cell types are derived near the center of the UMAP visualization. The photoreceptor precursors are adjacent to the neurogenic population and flow into the rods and cones. The amacrine and horizontal precursors (AC/HC) likewise flow from the neurogenic center into the mature amacrine and horizontal cells. 
 
-The photoreceptors (cones and rods) of the retina which are responsible for color and low-light vision, respectively, are near each other in the UMAP space. The major remaining retina cell types, by proportion in the mammalian eye are the muller glia, which are a glial cell type which help support the neurons of the retina. Next we have the neural cell types which transmit and help interpret the signals from the photoreceptors before they leave the retina via the optic stalk: the amacrine cells, retinal ganglia, horizontal, and bipolar cells. All of these cells are in well defined spaces in the UMAP. Finally we see even across species that the major cell types still group near each other (`r supFig_cap(name = 'figXGboost_umap', display = 'cite')`d). The macaque retina cells are not present in the precursor/neurogenic center of the UMAP as expected because only fully developed tissues were sampled in these data.  
+The photoreceptors (cones and rods) of the retina which are responsible for color and low-light vision, respectively, are near each other in the UMAP space. The major remaining retina cell types, by proportion in the mammalian eye are the muller glia, which are a glial cell type which help support the neurons of the retina. Next we have the neural cell types which transmit and help interpret the signals from the photoreceptors before they leave the retina via the optic stalk: the amacrine cells, retinal ganglia, horizontal, and bipolar cells. All of these cells are in well defined spaces in the UMAP. Finally we see even across species that the major cell types still group near each other (`r fig_cap(name = 'figXGboost_umap', display = 'cite')`d). The macaque retina cells are not present in the precursor/neurogenic center of the UMAP as expected because only fully developed tissues were sampled in these data.  
 
 <!-- ## Pseudobulk testing leverages high biological diversity to provide robust differential expression results -->
 
@@ -403,100 +413,26 @@ We hand curate over 300,000 cell type labels. With a standard xgboost algorithm 
 
 ## Projection allows community knowledge to be leveraged by all
 
-Many retina "atlases" have been published to date. We argue that we have created the first atlas that is generally useful because 1. our dataset/atlas is several times larger than any other published set, 2. our data is available via download in several forms at https://github.com/davemcg/scEiaD, and crucially 3. we provide a Google colab/Jupyter notebook which exactly lays out how to use scVI's to project (or query) outside data onto our scEiaD with minimum compute resources. Finally we also provide our xgboost model so outside groups can label their own datasets with our robust retina cell type labelling system. 
+Many retina "atlases" have been published to date. We argue that we have created the first atlas that is generally useful because 1. our dataset/atlas is several times larger than any other published set, 2. our data is available via download in several forms at https://github.com/davemcg/scEiaD, and crucially 3. we provide a Google colab/Jupyter notebook which exactly lays out how to use scVI's to project (or query) outside data onto our scEiaD with minimum compute resources. Finally we also provide our xgboost model so outside groups can label their own datasets with our robust retina cell type labeling system. 
 
-# Supplemental
-```{r supFig1, fig.width=4, fig.height=6, out.width=300, fig.cap=supFig1_cap, echo=FALSE, message = FALSE}
-supFig1_cap <- supFig_cap(name='supFig1_cap', caption =  'The left bar delineates the number of cells for each organism - technology combination. The right bar specifies the number of each cells in each post QC category. In silico doublets were identified with scrublet and DoubletDetector.')
-
-source('figs_and_tables/sup_fig1__qc_failure.R')
-supFig1_plot
-```
-
-
-Words
-
-Spacing
-
-
-
-```{r supFig_benchmark, fig.width=12, fig.height=8, out.width=300, fig.cap=supFig_benchmark_cap, echo=FALSE, message = FALSE}
-supFig_benchmark_cap <- supFig_cap(name='supFig_benchmark', caption =  'Performance of the various batch correction tools across various benchmarking metrics. For the LISI and Silhouette plots in A, B higher means better batch mixing and further to the right means better cluster purity. For the ARI and NMI metrics (which reflects how well cluster matches with cell type) in C, D, higher means a better score.')
-
-source('figs_and_tables/fig2__integrationPerf.R')
-cowplot::plot_grid(
-  cowplot::plot_grid(lisi + theme(legend.position="none"), silhouette, NULL, rel_widths = c(1,1,0.2), nrow = 1, labels = c('a' ,'b')), 
-  cowplot::plot_grid(ari, nmi, legend, rel_widths = c(1,1, 1, 0.2), ncol = 4, labels = c('c', 'd')), 
-  nrow = 2)
-```
-
-Words
-
-Spacing
-
-
-```{r supTab1_CTcounts, fig.width=8, fig.height=14, out.width=300, fig.cap=supTab1_CTcounts_cap, echo=FALSE, message = FALSE}
-supTab1_CTcounts_cap <- supTab_cap(name='supTab1_CTcounts_cap', caption =  'Counts for cell type labels. Published are the author created labels from the published datasets. Transferred area the cell labels that were transferred by a machine learning model onto the entire scEiaD dataset.')
-
+# Supplemental Information
+## Tables
+```{r supTab1_CTcounts, fig.width=8, fig.height=14, out.width=300, echo = F, results='asis', warning = F, fig.cap = supTab1_CTcounts_cap, fig.pos = 'H'}
+supTab1_CTcounts_cap <- supTab_cap(name='supTab1_CTcounts_cap', caption =  'Counts for cell type labels. Published are the author created labels from the published datasets. Transferred are the cell labels that were transferred by our xgboost-based machine learning model onto the entire scEiaD dataset.')
+cat("<div id=\"tbl:supTab1_CTcounts\">")
 source('figs_and_tables/sup_fig2__celltype_xgboost_labelling.R')
 fontsize(ctTable, size = 8, part = 'all')
+#Output Caption (* * for italics)
+cat(paste0("\n*",supTab1_CTcounts_cap,"*\n"))
+# Output </div>
+cat("</div>")
 ```
 
+```{r supTab_CTmislabels, fig.width=2, fig.cap=supTab_CTmislabels_cap, echo=FALSE, results='asis', message = FALSE, message = FALSE, warning = FALSE}
 
+supTab_CTmislabels_cap <- supTab_cap(name='supTab_CTmislabels', caption =  'Counts of cell type labels with our xgboost machine learning system (PredCellType) and the published cell type labels (TrueCellType).')
 
-Words
-
-Spacing
-
-
-
-```{r supTab_SAcounts, fig.width=8, fig.height=14, out.width=300, fig.cap=supTab_SAcounts_cap, echo=FALSE, message = FALSE}
-supTab_SAcounts_cap <- supTab_cap(name='supTab_SAcounts_cap', caption =  'Counts for number of studies with cell types labels before and after cell type label transfer')
-
-source('figs_and_tables/sup_fig2__celltype_xgboost_labelling.R')
-fontsize(saTable, size = 8, part = 'all')
-```
-
-
-Words
-
-Spacing
-
-
-
-```{r supFig_PR, fig.width=12, fig.height=10,  fig.cap=supFig_PR_cap, echo=FALSE, message = FALSE}
-supFig_PR_cap <- supFig_cap(name='supFig_PR', caption =  'Precision recall curves for our xgboost cell type predictor model across each cell type predicted')
-
-source('figs_and_tables/sup_fig__xgboost_PR.R')
-pr_split_curves
-```
-
-
-Words
-
-Spacing
-
-
-
-```{r supTab_AUCxgboost, fig.cap=supTab_AUCxgboost_cap, echo=FALSE, message = FALSE}
-supTab_AUCxgboost_cap <- supTab_cap(name='supTab_AUCxgboost', caption =  'Area under the precision recall curve (AUC) for each cell type, split by study')
-
-#source('figs_and_tables/sup_fig2__celltype_xgboost_labelling.R')
-fontsize(xgboost_pr_table_full %>% arrange(`Cell Type`, Study) %>% flextable() %>% width(width = 3), size = 8, part = 'all')
-```
-
-
-Words
-
-Spacing
-
-
-
-
-```{r supTab_CTmislabels, fig.width=2, fig.cap=supTab_CTmislabels_cap, echo=FALSE, message = FALSE}
-
-supTab_CTmislabels_cap <- supTab_cap(name='supTab_CTmislabels', caption =  'TEXT2')
-
+cat("<div id=\"tbl:supTab_CTmislabels\">")
 #source('figs_and_tables/sup_fig2__celltype_xgboost_labelling.R')
 fontsize(predictions %>%  
            mutate(max_pred_prob = rowMaxs(.[,-(31:ncol(predictions))] %>% as.matrix )) %>% 
@@ -514,17 +450,52 @@ fontsize(predictions %>%
            autofit(), 
          size = 8, 
          part = 'all')
+#Output Caption (* * for italics)
+cat(paste0("\n*",supTab_CTmislabels_cap,"*\n"))
+# Output </div>
+cat("</div>")
+```
+
+```{r supTab_SAcounts, fig.width=8, fig.height=14, out.width=300, fig.cap=supTab_SAcounts_cap, echo=FALSE, results='asis', message = FALSE, warning = FALSE}
+cat("<div id=\"tbl:supTab_SAcounts\">")
+supTab_SAcounts_cap <- supTab_cap(name='supTab_SAcounts_cap', caption =  'Counts for number of studies with cell types labels before and after cell type label transfer')
+
+source('figs_and_tables/sup_fig__xgboost_PR.R')
+fontsize(saTable, size = 8, part = 'all')
+#Output Caption (* * for italics)
+cat(paste0("\n*",supTab_SAcounts_cap,"*\n"))
+# Output </div>
+cat("</div>")
+```
+
+```{r supTab_AUCxgboost, fig.cap=supTab_AUCxgboost_cap, echo=FALSE, results='asis', message = FALSE, warning = FALSE}
+supTab_AUCxgboost_cap <- supTab_cap(name='supTab_AUCxgboost', caption =  'Area under the precision recall curve (AUC) for each cell type, split by study')
+
+cat("<div id=\"tbl:supTab_AUCxgboost\">")
+#source('figs_and_tables/sup_fig2__celltype_xgboost_labelling.R')
+fontsize(xgboost_pr_table_full %>% arrange(`Cell Type`, Study) %>% flextable() %>% width(width = 3), size = 8, part = 'all')
+#Output Caption (* * for italics)
+cat(paste0("\n*",supTab_AUCxgboost_cap,"*\n"))
+# Output </div>
+cat("</div>")
 ```
 
 
+## Figures
 
-Words
+```{r supFig_benchmark, fig.width=12, fig.height=8, out.width=300, fig.cap=supFig_benchmark_cap, echo=FALSE, message = FALSE, warning = FALSE}
+supFig_benchmark_cap <- supFig_cap(name='supFig_benchmark', caption =  'Performance of the various batch correction tools across various benchmarking metrics. For the LISI and Silhouette plots in A, B higher (y-axis) means better batch mixing and further to the right (x-axis) means better cluster purity. For the ARI and NMI metrics (which reflects how well cluster matches with cell type) in C, D, higher means a better score.')
 
-Spacing
+source('figs_and_tables/fig2__integrationPerf.R')
+cowplot::plot_grid(
+  cowplot::plot_grid(lisi + theme(legend.position="none"), silhouette, NULL, rel_widths = c(1,1,0.2), nrow = 1, labels = c('a' ,'b')), 
+  cowplot::plot_grid(ari, nmi, legend, rel_widths = c(1,1, 1, 0.2), ncol = 4, labels = c('c', 'd')), 
+  nrow = 2)
+```
 
 
-```{r supFig_platformInt, fig.width=12, fig.height=10,  fig.cap=supFig_platformInt_cap, echo=FALSE, message = FALSE}
-supFig_platformInt_cap <- supFig_cap(name='supFig_platformInt', caption =  '')
+```{r supFig_platformInt, fig.width=12, fig.height=10,  fig.cap=supFig_platformInt_cap, echo=FALSE, message = FALSE, warning = FALSE}
+supFig_platformInt_cap <- supFig_cap(name='supFig_platformInt', caption =  'Distribution of cell types across the 2D UMAP confirms that the cell types are being properly placed despite the wide variety of single sequencing platforms present.')
 input <- list()
 input[['meta_column']] <- 'CellType_predict'
 input[['pt_size_back']] <- 5
@@ -545,9 +516,8 @@ ctp3 <- make_meta_scatter_umap_plot(input, mf, meta_filter,
 ctp3$plot + facet_wrap(~Platform)
 ```
 
-
-```{r projection_fig, fig.width=12, fig.height=10,  fig.cap=projection_fig_cap, echo=FALSE, message = FALSE}
-projection_fig_cap <- supFig_cap(name='projection_fig', caption =  '')
+```{r projection_fig, fig.width=12, fig.height=10,  fig.cap=projection_fig_cap, echo=FALSE, message = FALSE, warning = FALSE}
+projection_fig_cap <- supFig_cap(name='projection_fig', caption =  'a. RPE distribution colored by study demonstrates how the RPE are grouped in a similar location. iPSC-based RPE we provided are located within the tissue based RPE cells. b. Screen shot of Google colab notebook that demonstrates how to integrate external data into the scEiaD resource. We see in the screenshort how the dataset contains many of the retinal cell types.')
 input[['pt_size_back']] <- 0
 input[['pt_size_meta']] <- 6
 input[['meta_column']] <- 'study_accession'
@@ -572,4 +542,27 @@ plot_grid(rpe$plot , colab_p)
 
 ```
 
+```{r supFig1, fig.width=4, fig.height=6, out.width=300, fig.cap=supFig1_cap, echo=FALSE, message = FALSE, warning = FALSE}
+supFig1_cap <- supFig_cap(name='supFig1_cap', caption =  'The left bar delineates the number of cells for each organism - technology combination. The right bar specifies the number of each cells in each post QC category. In silico doublets were identified with scrublet and DoubletDetector.')
 
+source('figs_and_tables/sup_fig1__qc_failure.R')
+supFig1_plot
+```
+
+```{r supFig_PR, fig.width=12, fig.height=10,  fig.cap=supFig_PR_cap, echo=FALSE, message = FALSE, warning = FALSE}
+supFig_PR_cap <- supFig_cap(name='supFig_PR', caption =  'Precision recall curves for our xgboost cell type predictor model across each cell type predicted')
+
+pr_split_curves
+```
+
+
+
+
+
+
+
+
+
+
+
+# Works Cited
